# xmas-tracker

./: .gitignore  README.md  dune-project  flake.nix  plot.py  pyproject.toml  todo.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2jy0a6jl92y1w2n1v21hrsrgca5pvyhn-source  6ws7lvdczma063grz4ghnv5s1q708ick-source  82ixsdcypwk506qgd986jvrzxfjnf5s1-source  a68ila9x11qbfw91aqcgm14808dxkxrc-source  iz4c5xfx1vxi2x2pw5q9n25mkzma9h4d-source  m1szqwijms610n6325mwjswslha4nd92-source  sscddlvzaz9vsjixqnbcm1xkykjmdv95-source  vc931mlg9rg9k1pmcw744hq9fpmsj4k0-source  zxn8ib80mvv9iff3m6mnac21iijffzz8-source
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
notebooks/: gen_ts.ipynb
test/: dune
