[tool.poetry]
name = "xmas-tracker"
version = "0.1.0"
description = ""
authors = ["Taylor Henderson <tph5595@verizon.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
seaborn = "^0.13.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
